Update to some bib entries

--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -81,6 +81,8 @@ path <- "figures/beyond-borders/check_aghq-nuts/ik-aghq-nuts.png"
 knitr::include_graphics(path)
 ```
 
+\newpage
+
 ## Lengthscale prior sensitivity {#lengthscale-prior}
 
 | Description | Prior | Additional details  |
