--- a/references.bib
+++ b/references.bib
@@ -1132,10 +1132,18 @@
 }
 
 @article{hastings1970monte,
-  title = {{Monte Carlo sampling methods using Markov chains and their applications}},
-  author = {Hastings, W Keith},
-  year = 1970,
-  publisher = {Oxford University Press}
+ ISSN = {00063444},
+ URL = {http://www.jstor.org/stable/2334940},
+ abstract = {A generalization of the sampling method introduced by Metropolis et al. (1953) is presented along with an exposition of the relevant theory, techniques of application and methods and difficulties of assessing the error in Monte Carlo estimates. Examples of the methods, including the generation of random orthogonal matrices and potential applications of the methods to numerical problems arising in statistics, are discussed.},
+ author = {W. K. Hastings},
+ journal = {Biometrika},
+ number = {1},
+ pages = {97--109},
+ publisher = {[Oxford University Press, Biometrika Trust]},
+ title = {Monte Carlo Sampling Methods Using Markov Chains and Their Applications},
+ urldate = {2023-12-29},
+ volume = {57},
+ year = {1970}
 }
 
 @article{helleringer2011reliability,
@@ -1962,9 +1970,16 @@
 }
 
 @article{roberts2004general,
-  title = {{General state space Markov chains and MCMC algorithms}},
-  author = {Roberts, Gareth O and Rosenthal, Jeffrey S},
-  year = 2004
+author = {Gareth O. Roberts and Jeffrey S. Rosenthal},
+title = {{General state space Markov chains and MCMC algorithms}},
+volume = {1},
+journal = {Probability Surveys},
+number = {none},
+publisher = {Institute of Mathematical Statistics and Bernoulli Society},
+pages = {20 -- 71},
+year = {2004},
+doi = {10.1214/154957804100000024},
+URL = {https://doi.org/10.1214/154957804100000024}
 }
 
 @article{rose2001sick,
@@ -1979,7 +1994,7 @@
 }
 
 @article{roy2020convergence,
-  title = {{Convergence diagnostics for markov chain monte carlo}},
+  title = {{Convergence diagnostics for Markov chain Monte Carlo}},
   author = {Roy, Vivekananda},
   year = 2020,
   journal = {Annual Review of Statistics and Its Application},
@@ -2134,14 +2149,14 @@
   url = {https://doi.org/10.1201/9780429459016}
 }
 
-@article{shapley1953value,
+@misc{shapley1953value,
   title = {{A value for n-person games}},
   author = {Shapley, Lloyd S and others},
   year = 1953,
   publisher = {Princeton University Press Princeton}
 }
 
-@article{shumway2017time,
+@book{shumway2017time,
   title = {{Time Series Analysis and Its Applications With R Examples}},
   author = {Shumway, Robert H and Stoffer, David S},
   year = 2017,
@@ -2197,7 +2212,7 @@
   pages = {319--392}
 }
 
-@article{slaymaker2020croi,
+@misc{slaymaker2020croi,
   title = {{Risk factors for new HIV infections in the general population in sub-Saharan Africa}},
   author = {Slaymaker, Emma and Risher, Kathryn A. and Abdul, Ramadhani and Marston, Milly and Tomlin, Keith and Newton, Robert and Ndyanabo, Anthony and McLean, Estelle and Dadirai, Tawanda and Kwaro, Daniel and Baisley, Kathy and Kishamawe, Coleman},
   year = 2020
