--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -19,12 +19,15 @@ bibliography: references.bib
 
 <!-- JWE: Minor corrections often involve (1) fixing typos, (2) clarifying things, (3) elaborating on the contributions to science and implications of the PhD in the conclusions chapter [by far the most common point of examiner feedback] -->
 
-This chapter concludes the thesis by discussing its most important contributions, limitations, some promising avenues for future work, and broader reflections about the work.
+This chapter concludes the thesis by discussing its most important contributions, some promising avenues for future work, and broader reflections about the work.
 
 ## Contributions
 
-Chapter \@ref(beyond-borders) used tools for model assessment such as proper scoring rules and posterior predictive checks to comprehensively compare adjacency- and kernel-based models for spatial structure.
-The experiments conducted provide useful data to guide the use of spatial random effect models by applied practitioners, as well as to base methodological developments on.
+Effective response to the HIV epidemic depends on strategic information provided by models of data.
+The contributions of this thesis are both in generating this information, and in understanding and advancing statistical methods.
+
+Chapter \@ref(beyond-borders) comprehensively compared adjacency- and kernel-based models for spatial structure, using tools for model assessment such as proper scoring rules and posterior predictive checks.
+The experiments conducted provide useful data to guide use of spatial random effect models by applied practitioners, as well as to base methodological developments on.
 The most important findings were as follows (remains to write).
 
 (ref:global-update-conclusion) Panel A shows the front page of @unaids2023global. Panel B shows the page containing text and a figure based on the work done in Chapter \@ref(multi-agyw). In this figure, 30 countries are included.
@@ -40,27 +43,14 @@ The tool now encompasses at least 30 countries, expanding from the initial 13 in
 Models will be rerun each year to populate the tool with updated information as a part of the UNAIDS annual HIV estimates process.
 Alongside these applied contributions, Chapter \@ref(multi-agyw) exemplified specification of complex multinomial spatio-temporal models in `R-INLA` using the Poisson-multinomial transformation, including using two- and three-way Kronecker product interactions.
 
-
 The Naomi model has been used in over 35 countries in SSA to produce district-level estimates of HIV indicators by synthesising evidence from multiple sources.
-Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by enabling more accurate inferences for this challenging and practically important model.
-Its most important methods contributions are two-fold.
+Chapter \@ref(naomi-aghq) developed deterministic Bayesian inference methods, motivated by the aim of providing more accurate inferences for this challenging and practically important model.
+Its most important methodological contributions are two-fold.
 First, an implementation of INLA which is compatible with models specified using a `TMB` C++ template.
 For the first time, practitioners can now fit essentially any model using the INLA method.
 Second, a quadrature rule which combines PCA and AGHQ to naturally extend the applicability of INLA methods to moderate hyperparameter dimension, allowing more complex models to be fit.
 Additionally, Chapter \@ref(naomi-aghq) provides detailed description and analysis of the Naomi model.
 Indeed, @esra2023improved used tables and text from Appendix \@ref(naomi-aghq-appendix) in an update to @eaton2021naomi.
-
-## Limitations
-
-The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on producing experimental, empirical evidence. 
-This approach reflects the complexity of the models and methods used in this thesis.
-Understanding complex systems from a theoretical perspective can be challenging.
-That said, the work in this thesis would benefit from closer integration with statistical theory.
-While obtaining comprehensive theoretical understanding of models or algorithms may be too optimistic, there may be significant value in better understanding simplified examples, limiting cases, or constituent parts.
-
-In working most tangibly with real world data, Chapter \@ref(multi-agyw) inherits a wide range of limitations.
-To highlight a few:
-the external validity of risk ratios derived from cohort studies, difficulties defining and measuring key population sizes, and under-reporting of high-risk sexual behaviour.
 
 ## Future work
 
@@ -111,6 +101,16 @@ To avoid this issue, I implemented all models in Chapters \@ref(beyond-borders) 
 Alongside being sufficiently flexible to meet my model specification requirements, `TMB` is compatible with a range of inference methodologies, including those advanced in this thesis.
 As such, `TMB` remains [@osgood2023statistical] an under-rated statistical tool.
 In demonstrating some of its capabilities, I hope this thesis contributes to its wider adoption.
+
+The work done in this thesis, particularly Chapters \@ref(beyond-borders) and \@ref(naomi-aghq), focused on producing experimental, empirical evidence. 
+This approach reflects the complexity of the models and methods used in this thesis.
+Understanding complex systems from a theoretical perspective can be challenging.
+That said, in my opinion the work in this thesis could benefit from closer integration with statistical theory.
+Though comprehensive theoretical understanding of models or algorithms may be too optimistic, better understanding simplified examples, limiting cases, or constituent parts may provide value.
+
+Working with the data in Chapter \@ref(multi-agyw) deepened my appreciation for the realistic challenges faced in applied work, and data quality being linchpin for any successful statistical analysis.
+While from the real world, the data in Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) underwent substantial cleaning, processing, and vetting before I handled them, as is typical in methodological research.
+It is important that methodological and theoretical statisticians appreciate the real challenges of applied work, by doing it themselves, or working in close collaboration with those who do.
 
 There are both direct and indirect paths to impact for the work in this thesis.
 Directly, the methodological contributions of Chapters \@ref(beyond-borders) and \@ref(naomi-aghq) may eventually lead to marginally more accurate indicator estimates, contributing to a broadly more effective response.
