--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -9,20 +9,19 @@ There are many worse ways to spend billions of dollars than fighting poverty and
 
 Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab.
 I left Cambridge with appropriately raised aspirations, Google document templates, and only slightly terrified about the future.
-Thanks to Lenni, Lenny, Janika, Geetha, Simon, Phil, Frances, Leilani and Tammy.
+Thanks to Trenton, Lenni, Lenny, Geetha, Janika, Simon, Phil, Frances, Leilani and Tammy.
 
 Thanks to Alex Stringer, and the Department of Statistics and Actuarial Science, for hosting my visit to the University of Waterloo.
-Chapter \@ref(naomi-aghq) would not have been possible without Alex.
-I'd likely still be waiting Markov chains began in Chapter \@ref(beyond-borders) to converge.
-Thanks to Tim Lucas and Patrick Brown for putting me in touch with Alex, and Håvard Rue and Finn Lindgren for helpful answers on the `R-INLA` discussion group.
+Without Alex, Chapter \@ref(naomi-aghq) would not have been possible, and I'd still be waiting Markov chains began in Chapter \@ref(beyond-borders) to converge.
+Tim Lucas and Patrick Brown for put me in touch with Alex, and Håvard Rue and Finn Lindgren gave helpful answers on the `R-INLA` discussion group.
 Thanks also to Kate, my tour guide in Waterloo, and Midtown Yoga for helping me stay balanced.
 
-My sense for what matters has been shaped, and I'd argue improved, by the Effective Altruism community.
+My sense for what matters has been shaped, and arguably improved, by the Effective Altruism community.
 Thank you to the Meridian, Trajan, and LEAH offices for hosting me this final year.
 Thanks to my housemates in Hackney: August, Dewi, Henry, Jerome, Johnny, and Tamara.
 Not to be all Bay area, but I'm proud of the community we've built.
 Pınar believed in me and my research at times when I didn't.
-Thanks to Mr Sam, and attendees of the Manshead grit salt, for impressing upon me the status of stats man.
+Thanks to Mr Sam, and attendees of the Manshead grit salt, for conferring upon me the status of stats man.
 No thanks to Simon Marshall, he didn't help, if anything he held me back.
 I extend my deepest thanks to my parents, Deborah and Karl, and my grandparents, Kath and Tony, whose love and support have granted me the privilege to pursue my interests.
 
